SERVER-41992 Fix $setIntersection so it is commutative with null and empty arguments.